[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/enemy/nazi_1/nazi1.png" type="Texture" id=1]
[ext_resource path="res://characters/enemy/nazi_1/nazi.gd" type="Script" id=2]
[ext_resource path="res://characters/enemy/nazi_1/enemy-gun.png" type="Texture" id=3]
[ext_resource path="res://audio/gunshot.mp3" type="AudioStream" id=4]
[ext_resource path="res://characters/enemy/nazi_1/enemy_shoot.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 640.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 32 )

[node name="nazi" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 18
collision_mask = 18
script = ExtResource( 2 )

[node name="enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 1.90735e-06 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 19
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="enemy-shoot" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="enemy-shoot"]
position = Vector2( 8, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="sound" type="AudioStreamPlayer" parent="enemy-shoot"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="Timer" type="Timer" parent="enemy-shoot"]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="enemy" to="." method="_on_enemy_body_entered"]
[connection signal="body_exited" from="enemy" to="." method="_on_enemy_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="enemy-shoot/Timer" to="enemy-shoot" method="_on_Timer_timeout"]
